feat: add 60 realistic jobs, dashboard filtering, and job detail modal

--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
         </footer>
     </div>
 
+    <div id="job-modal" class="modal-overlay">
+        <div class="modal-content" id="modal-content">
+            <!-- Modal content injected by app.js -->
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 
